postgresql-common (175) UNRELEASED; urgency=medium

  * pg_createcluster, createcluster.conf: Set cluster_name on 9.5+.
  * pg_buildext: Don't set any CFLAGS by default.

 -- Christoph Berg <myon@debian.org>  Mon, 23 May 2016 17:34:49 +0200

postgresql-common (174) unstable; urgency=medium

  [ Christoph Berg ]
  * postgresql-common: Enforce strict version dependency on
    postgresql-client-common to avoid API mismatch bugs in PgCommon.pm.
  * maintscripts-functions: Save pg_dump on catversion bumps as well.
  * Updated ja translation by Takuma Yamada, thanks! (Closes: #820756)
  * Remove not-to-be-translated shell code-only chunk from
    debian/po/templates.pot. (debconf-updatepo --skip-pot to the rescue!)
    (Closes: #821445)

  [ Martin Pitt ]
  * debian/supported-versions: Add Ubuntu 16.10.

 -- Christoph Berg <christoph.berg@credativ.de>  Wed, 11 May 2016 15:04:25 +0200

postgresql-common (173) unstable; urgency=medium

  [ Christoph Berg ]
  * README.Debian: Fix a typo.
  * Updated nl translation, thanks Frans Spiesschaert! (Closes: #812353)
  * Updated ru translation, thanks Sergey Alyoshin! (Closes: #815596)
  * Updated ja translation, thanks Takuma Yamada! (Closes: #816069)
  * preinst_check_catversion: Handle missing catalog version file.
  * pg_renamecluster: Don't try to rename a non-existing stats directory.
  * pg_conftool: Refuse operation on non-existing clusters.
  * maintscript-functions, templates: Remove '#' characters from upgrade
    instructions on catalog version change for easier cut-and-paste.
  * t/032_ssl_key_permissions.t: Validate server snakeoil key checks.
  * pgdg/apt.postgresql.org.sh: Add xenial and trusty.

  [ Adam Conrad ]
  * pgcommon.sh: Adjust for >= xenial using Debian-style locale generation
    methods, and allow fallback to the old Ubuntu method for old releases.

 -- Christoph Berg <myon@debian.org>  Wed, 30 Mar 2016 15:08:06 +0200

postgresql-common (172) unstable; urgency=medium

  [ Christoph Berg ]